# i3status-mini

./: .clang-tidy  .clangd  CMakeLists.txt  CMakePresets.json  README.md
include/: config.h  header.h
src/: cpu_usage.c  get_time.c  main.c  tpool.c  volume.c
